# lyric-pro-etls

./: docker-compose.yaml  pyproject.toml
lyric_pro_etls/: models.py  mongo.py
scraping/: settings.py
scraping/spiders/: genius_spider.py
